# nba-referee-market-edge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: DATA_SOURCES.md  app.js  index.html  script.js  styles.css
reports/: findings.md  metrics.json
scripts/: build_markets.py  overnight.sh  run_study.py  scrape_bref.py
src/refedge/: __init__.py  cache.py  config.py
src/refedge/backtest/: calibration.py  kelly.py  metrics.py
src/refedge/data/: bref.py  espn.py  markets.py  odds.py  teams.py
src/refedge/features/: build.py  referee.py  team.py
src/refedge/model/: permutation.py  train.py  walkforward.py
tests/: test_leakage.py
